New features added in the file

--- a/genai_text_to_video.ipynb
+++ b/genai_text_to_video.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,9 +528,13 @@
     "import numpy as np\n",
     "import moviepy.editor as mpy\n",
     "import requests\n",
-    "\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
     "# Hardcoded API key\n",
-    "PEXELS_API_KEY = ''\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "PEXELS_API_KEY = os.environ.get('PEXELS_API_KEY')\n",
     "\n",
     "def analyze_data(context_text):\n",
     "    # Simple analysis to determine visualization type based on keywords\n",
@@ -648,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,28 +758,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analyzing context: 20 apples and 30 mangoes\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected video URL: https://videos.pexels.com/video-files/9613896/9613896-uhd_2160_3840_24fps.mp4\n",
+      "Analyzing context: 20 apples and 30 mangoes\n",
+      "Error fetching videos: 401 - {\"status\":401,\"code\":\"Unauthorized\"}\n",
+      "No video URL available to create the final video.\n",
       "Placeholder image not found at: F:\\100x_enginners_hackathon_genai\\visualization.png. Please ensure it exists.\n"
      ]
     }
    ],
    "source": [
-    "api_key=''\n",
-    "# groq_api_key='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'\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "api_key=os.getenv('PEXELS_API_KEY')\n",
+    "# groq_api_key=''\n",
     "process_text_and_generate_video('20 apples and 30 mangoes', api_key)"
    ]
   },
@@ -1335,17 +1339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsed Data: {'apple': '20 bananas  40'}\n",
-      "Generated Video URLs: ['https://videos.pexels.com/video-files/5839005/5839005-hd_1080_1920_24fps.mp4', 'https://videos.pexels.com/video-files/5981788/5981788-hd_1280_720_24fps.mp4', 'https://videos.pexels.com/video-files/7198821/7198821-uhd_2560_1440_25fps.mp4']\n",
-      "Text overlay to be added: apple: 20 bananas  40\n",
-      "Stitched Video URL: https://videos.pexels.com/video-files/5839005/5839005-hd_1080_1920_24fps.mp4\n"
+      "Your API Key: None\n",
+      "Parsed Data: {'apple': '20 bananas  40 apples'}\n",
+      "An error occurred: Pexels API request failed with status code 401\n"
      ]
     }
    ],
@@ -1859,90 +1862,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parsed Data: {'apple': '20 bananas  40'}\n",
-      "Generated Video URLs: ['https://videos.pexels.com/video-files/5839005/5839005-hd_1080_1920_24fps.mp4', 'https://videos.pexels.com/video-files/5981788/5981788-hd_1280_720_24fps.mp4', 'https://videos.pexels.com/video-files/7198821/7198821-uhd_2560_1440_25fps.mp4']\n",
-      "Text overlay to be added: apple: 20 bananas  40\n",
-      "Stitched Video URL: https://videos.pexels.com/video-files/5839005/5839005-hd_1080_1920_24fps.mp4\n"
-     ]
-    }
-   ],
    "source": [
     "# import requests  # Ensure requests is imported\n",
     "# from textblob import TextBlob\n",
