All the bugs in the routes and NLP pipeline  are fixed and code is working ✅

--- a/second_text_to_video_new_approach_genai.ipynb
+++ b/second_text_to_video_new_approach_genai.ipynb
@@ -541,7 +541,7 @@
     "    \n",
     "    # Generate audio\n",
     "    tts = gtts.gTTS(summary_text, lang='en')\n",
-    "    tts.save('summary_audio.mp3')\n",
+    "    tts.save('F:\\\\100x_enginners_hackathon_genai\\\\uploads\\\\audio_files\\\\summary_audio.mp3')\n",
     "    \n",
     "    return {\n",
     "        'categories': categories,\n",
@@ -1050,11 +1050,15 @@
    },
    "outputs": [],
    "source": [
-    "# Create the animated GIF\n",
-    "gif_path = create_animated_gif('30% dogs use nokia and 90% use iphones')\n",
+    "# # Create the animated GIF\n",
+    "# gif_path = create_animated_gif('30% dogs use nokia and 90% use iphones')\n",
     "\n",
-    "# Convert to storytelling video\n",
-    "video_path = convert_gif_to_storytelling_video(gif_path, '30% dogs use nokia and 90% use iphones')"
+    "# # Convert to storytelling video\n",
+    "# video_path = convert_gif_to_storytelling_video(gif_path, '30% dogs use nokia and 90% use iphones')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Manually prompting while developing model not in use now  usage for the storytelling  video  Generation."
    ]
   },
   {
