All the bugs in the routes and NLP pipeline  are fixed and code is working ✅

--- a/second_text_to_video_new_approach_genai.ipynb
+++ b/second_text_to_video_new_approach_genai.ipynb
@@ -1058,7 +1058,7 @@
     "\n",
     "\n",
     "\n",
-    "# Manually prompting while developing model not in use now  usage for the storytelling  video  Generation."
+    "# Manually prompting while developing model not in use now ."
    ]
   },
   {
