Remove .pkl files from Git LFS and update .gitattributes

--- a/csv_to_video_generation.ipynb
+++ b/csv_to_video_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the HF_HOME environment variable to change the cache path\n",
-    "os.environ['HF_HOME'] = \"F:\\\\cache_folder\"  # Change this to your desired cache path\n",
+    "os.environ['HF_HOME'] = \"D:\\\\cahc_models_folder\"  # Change this to your desired cache path\n",
     "\n",
     "# Load the model and tokenizer from .pkl files\n",
     "models_dir = os.path.abspath(os.path.join(os.getcwd(), 'models'))\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
     "    # Generate audio\n",
     "    tts = gtts.gTTS(summary_text, lang='en')\n",
     "    audio_filename = f'summary_audio_{uuid.uuid4().hex}.mp3'\n",
-    "    audio_path = os.path.join('F:\\\\100x_enginners_hackathon_genai\\\\uploads\\\\audio_files', audio_filename)\n",
+    "    audio_path = os.path.join('D:\\\\1OOx-enginners-hackathon-submission-2\\\\uploads\\\\audio_files', audio_filename)\n",
     "    tts.save(audio_path)\n",
     "\n",
     "    return {\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
    "source": [
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
-    "    csv_file_path = 'F:\\\\100x_enginners_hackathon_genai\\\\data\\\\2015.csv'\n",
+    "    csv_file_path = 'D:\\\\1OOx-enginners-hackathon-submission-2\\\\data\\\\2015.csv'\n",
     "    process_csv_and_create_video(csv_file_path)"
    ]
   },
