This project is on hold✅

--- a/multimodel_notebok_production_code.ipynb
+++ b/multimodel_notebok_production_code.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:45:07.245050Z",
@@ -103,12 +103,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:py.warnings:c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\datapoints\\__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\datapoints\\__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
       "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
-      "\n",
-      "WARNING:py.warnings:c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\transforms\\v2\\__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
-      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
-      "\n"
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\transforms\\v2\\__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n"
      ]
     }
    ],
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:45:12.170349Z",
@@ -197,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:45:12.251052Z",
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:45:12.940579Z",
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:45:23.786142Z",
@@ -486,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:48:47.526319Z",
@@ -607,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:48:48.997762Z",
@@ -1004,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:48:50.942059Z",
@@ -1055,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:48:53.140315Z",
@@ -1100,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:48:55.191094Z",
@@ -1135,10 +1133,13 @@
     "        narration_file = generate_narration(narration_text)\n",
     "        \n",
     "        logging.info(\"Creating the infographic video...\")\n",
-    "        generate_infographic_video(data, insights, columns, audio_file=narration_file)\n",
+    "        video_file = generate_infographic_video(data, insights, columns, audio_file=narration_file)\n",
     "        \n",
     "        end_time = time.time()\n",
     "        logging.info(f\"Pipeline completed successfully in {end_time - start_time:.2f} seconds\")\n",
+    "        \n",
+    "        \n",
+    "        return video_file\n",
     "    \n",
     "    except FileNotFoundError as fnf_error:\n",
     "        logging.error(f\"File not found: {fnf_error}\")\n",
@@ -1159,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-04T07:48:56.581161Z",
@@ -1175,6 +1176,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO:root:Loading and preprocessing data...\n",
+      "INFO:root:Loading data from D:\\1OOx-enginners-hackathon-submission-2\\data\\2015.csv\n",
+      "INFO:root:Data loaded successfully\n",
       "WARNING:py.warnings:c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\extmath.py:1051: RuntimeWarning: invalid value encountered in divide\n",
       "  updated_mean = (last_sum + new_sum) / updated_sample_count\n",
       "\n",
@@ -1184,6 +1188,12 @@
       "WARNING:py.warnings:c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\extmath.py:1076: RuntimeWarning: invalid value encountered in divide\n",
       "  new_unnormalized_variance -= correction**2 / new_sample_count\n",
       "\n",
+      "INFO:root:Data preprocessing completed\n",
+      "INFO:root:Performing EDA...\n",
+      "INFO:root:Performing EDA...\n",
+      "INFO:root:Analyzing the user's prompt...\n",
+      "INFO:root:Analyzing prompt for insights\n",
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n",
       "WARNING:py.warnings:c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\transformers\\generation\\configuration_utils.py:628: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.7` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
       "  warnings.warn(\n",
       "\n",
@@ -1192,12 +1202,22 @@
       "\n",
       "WARNING:root:No insights could be extracted from the provided prompt. Using fallback insights.\n",
       "WARNING:root:No columns could be extracted from the provided prompt. Using fallback columns.\n",
+      "INFO:root:Insights extracted: ['correlation']\n",
+      "INFO:root:Columns extracted: ['Country', 'Region']\n",
+      "INFO:root:Generating narration...\n",
+      "INFO:root:Generating narration for text: Here is the analysis based on the prompt: analyse the region columns.. Insights: correlation\n",
+      "INFO:root:Narration saved to narration.mp3\n",
+      "INFO:root:Creating the infographic video...\n",
+      "INFO:root:Generating animated frames from data\n",
+      "INFO:root:Generating correlation frames\n",
       "WARNING:py.warnings:c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\seaborn\\matrix.py:202: RuntimeWarning: All-NaN slice encountered\n",
       "  vmin = np.nanmin(calc_data)\n",
       "\n",
       "WARNING:py.warnings:c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\seaborn\\matrix.py:207: RuntimeWarning: All-NaN slice encountered\n",
       "  vmax = np.nanmax(calc_data)\n",
-      "\n"
+      "\n",
+      "INFO:root:Generated 1 animated frames\n",
+      "INFO:root:Creating video from frames\n"
      ]
     },
     {
@@ -1228,7 +1248,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                            \r"
+      "INFO:root:Video saved as final_production_model.mp4         \n",
+      "INFO:root:Pipeline completed successfully in 29.08 seconds\n"
      ]
     },
     {
@@ -1237,7 +1258,8 @@
      "text": [
       "Moviepy - Done !\n",
       "Moviepy - video ready final_production_model.mp4\n",
-      "Video successfully generated!\n"
+      "Video successfully generated!\n",
+      "None\n"
      ]
     }
    ],
@@ -1255,7 +1277,9 @@
     "# if not os.path.exists(title_image):\n",
     "#     raise FileNotFoundError(f\"Title image not found: {title_image}\")\n",
     "\n",
-    "data_storytelling_pipeline(file_path, prompt)"
+    "video_file = data_storytelling_pipeline(file_path, prompt)\n",
+    "print(video_file)\n",
+    "# return video_file"
    ]
   },
   {
